--- a/notes.org
+++ b/notes.org
@@ -4,5 +4,7 @@
  + [X] Parse complex numbers
  + [X] Function for converting to "numerical" results (promote
    non-integer ratios to float)
- + [ ] Derivatives
- + [ ] Simplify ~y / y^2~ (Consider ~D(tan(x)^2, x)~ as a stretch goal)
+ + [X] Derivatives
+ + [X] Simplify ~y / y^2~
+ + [ ] (Consider ~D(tan(x)^2, x)~ as a stretch goal)
+ + [ ] Simplify ~(x^2)^2~
