--- a/notes.org
+++ b/notes.org
@@ -7,4 +7,4 @@
  + [X] Derivatives
  + [X] Simplify ~y / y^2~
  + [ ] (Consider ~D(tan(x)^2, x)~ as a stretch goal)
- + [ ] Simplify ~(x^2)^2~
+ + [X] Simplify ~(x^2)^2~
