--- a/notes.org
+++ b/notes.org
@@ -8,3 +8,4 @@
  + [X] Simplify ~y / y^2~
  + [ ] (Consider ~D(tan(x)^2, x)~ as a stretch goal)
  + [X] Simplify ~(x^2)^2~
+ + [ ] Make floating-points that are actually integers be treated as integers for some computations
