--- a/notes.org
+++ b/notes.org
@@ -10,4 +10,4 @@
  + [X] Simplify ~(x^2)^2~
  + [ ] Make floating-points that are actually integers be treated as integers for some computations
  + [X] Get rid of the Rank2Types in FunctionType
- + [ ] m (Maybe ...) -> MaybeT m ... in FunctionType
+ + [X] m (Maybe ...) -> MaybeT m ... in FunctionType
