--- a/notes.org
+++ b/notes.org
@@ -15,9 +15,9 @@
 ** Sept 18, 2019
  + [ ] There may still be some neatening (~mmorph~ style) to be done
    with the FunctionType transition
- + [ ] Symbolic mode
-   - [ ] Get rid of fractions if in floating mode
-   - [ ] Make ~Normalize.hs~ not depend on ~Function.hs~
+ + [-] Symbolic mode
+   - [X] Get rid of fractions if in floating mode
+   - [X] Make ~Normalize.hs~ not depend on ~Function.hs~
    - [ ] If in symbolic mode, hold calculations
    - [ ] Run usual passes into N(...) but forcing into floating mode
  + [ ] Move the primary pass from ~Main.hs~ to ~Normalize.hs~
