--- a/notes.org
+++ b/notes.org
@@ -43,4 +43,4 @@
  + [ ] Consider how worth it it is to be using Control.Category
    versions of identity and composition and if there's a performance
    hit.
- + [ ] Correct parse order for ~/~
+ + [X] Correct parse order for ~/~
