--- a/notes.org
+++ b/notes.org
@@ -13,8 +13,10 @@
  + [X] Get rid of the Rank2Types in FunctionType
  + [X] m (Maybe ...) -> MaybeT m ... in FunctionType
 ** Sept 18, 2019
- + [ ] There may still be some neatening (~mmorph~ style) to be done
+ + [X] There may still be some neatening (~mmorph~ style) to be done
    with the FunctionType transition
+   - I think we should be good on this. The new FunctionType is
+     serving me well.
  + [X] Symbolic mode
    - [X] Get rid of fractions if in floating mode
    - [X] Make ~Normalize.hs~ not depend on ~Function.hs~
