Corrected commutativity of multiplication

--- a/notes.org
+++ b/notes.org
@@ -72,7 +72,7 @@
    - [ ] Vector derivatives...?
    - [X] Matrices
    - [ ] Matrix multiplication
-   - [ ] Don't allow multiplication to commute if we're in the wrong mode for it
+   - [X] Don't allow multiplication to commute if we're in the wrong mode for it
    - [X] Identify the "type" (read: shape) of various entities
    - [ ] Identify the shape of compound entities like sums and function calls
  + [ ] Recognize known even and odd functions and simplify negatives that appear inside them
