--- a/notes.org
+++ b/notes.org
@@ -74,7 +74,7 @@
    - [ ] Matrix multiplication
    - [X] Don't allow multiplication to commute if we're in the wrong mode for it
    - [X] Identify the "type" (read: shape) of various entities
-   - [ ] Identify the shape of compound entities like sums and function calls
+   - [X] Identify the shape of compound entities like sums and function calls
  + [ ] Recognize known even and odd functions and simplify negatives that appear inside them
  + [ ] Make ~alwaysInexact~ smart enough to realize that when the
    argument is already inexact, it won't hurt to go ahead and carry
