--- a/notes.org
+++ b/notes.org
@@ -77,6 +77,7 @@
    - [X] Identify the "type" (read: shape) of various entities
    - [X] Identify the shape of compound entities like sums and function calls
    - [ ] "Polymorphic" zero and identity values like Emacs Calc has
+   - [ ] Matrix powers
  + [ ] Recognize known even and odd functions and simplify negatives that appear inside them
  + [ ] Make ~alwaysInexact~ smart enough to realize that when the
    argument is already inexact, it won't hurt to go ahead and carry
