--- a/notes.org
+++ b/notes.org
@@ -85,3 +85,6 @@
  + [ ] Make ~alwaysInexact~ smart enough to realize that when the
    argument is already inexact, it won't hurt to go ahead and carry
    out the computation.
+** Oct 1, 2019
+ + [ ] Decide when we want to distribute * over +. It can simplify
+   expressions sometimes.
